force-app/main/default/objects/Vehicle_Booking__c/Vehicle_Booking__c.object-meta.xml
<CustomObject>
    <label>Vehicle Booking</label>
    <pluralLabel>Vehicle Bookings</pluralLabel>
    <description>Rental-car bookings made by the Skywave Rental Car Agent. One per reservation, linked to the customer Contact and (optionally) the flight Booking the trip is tied to.</description>
    <nameField>
        <label>Vehicle Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>VB-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>