force-app/main/default/objects/Vehicle_Booking__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <label>Booking Date</label>
    <description>Date and time when the rental booking was created</description>
    <inlineHelpText>The date and time this rental booking was placed</inlineHelpText>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>