force-app/main/default/objects/Vehicle_Booking__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <label>Confirmation Code</label>
    <description>Unique confirmation code for the rental booking</description>
    <inlineHelpText>The 6-character confirmation code (e.g., RC8K2M) customers use to reference this rental.</inlineHelpText>
    <type>Text</type>
    <length>6</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>