force-app/main/default/objects/Vehicle_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>The customer who made this rental-car booking</description>
    <inlineHelpText>Select the contact associated with this rental booking</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle Bookings</relationshipLabel>
    <relationshipName>Vehicle_Bookings</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>