force-app/main/default/objects/Vehicle_Booking__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <label>Daily Rate</label>
    <description>Per-day rate in USD for the booked vehicle category</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>