force-app/main/default/objects/Vehicle_Booking__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <description>Pickup location — the destination city/airport (IATA) the customer flies to.</description>
    <inlineHelpText>The destination airport (IATA) where the car is picked up</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>