force-app/main/default/objects/Vehicle_Booking__c/fields/Example_Model__c.field-meta.xml
<CustomField>
    <fullName>Example_Model__c</fullName>
    <label>Example Model</label>
    <description>Representative vehicle model for the booked category (e.g. "VW Polo or similar").</description>
    <type>Text</type>
    <length>120</length>
</CustomField>