force-app/main/default/objects/Vehicle_Booking__c/fields/Flight_Booking__c.field-meta.xml
<CustomField>
    <fullName>Flight_Booking__c</fullName>
    <label>Flight Booking</label>
    <description>The flight Booking this rental car is tied to. The rental option is only offered once the customer has a confirmed flight, so this links the car to the trip it belongs to.</description>
    <inlineHelpText>Select the flight booking this rental is associated with</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Vehicle Bookings</relationshipLabel>
    <relationshipName>Vehicle_Bookings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>