force-app/main/default/objects/Vehicle_Booking__c/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <label>Pickup Date</label>
    <description>Date the rental starts. Defaults to the arrival date of the linked flight.</description>
    <type>Date</type>
</CustomField>