force-app/main/default/objects/Vehicle_Booking__c/fields/Rental_Days__c.field-meta.xml
<CustomField>
    <fullName>Rental_Days__c</fullName>
    <label>Rental Days</label>
    <description>Number of rental days (1-14) chosen on the duration slider</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>