force-app/main/default/objects/Vehicle_Booking__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <label>Return Date</label>
    <description>Date the rental ends (Pickup Date + Rental Days).</description>
    <type>Date</type>
</CustomField>