force-app/main/default/objects/Vehicle_Booking__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <description>Total rental price in USD (Daily Rate x Rental Days).</description>
    <inlineHelpText>Enter the total amount in USD for this rental</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>