force-app/main/default/objects/Vehicle_Booking__c/fields/Vehicle_Category__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Category__c</fullName>
    <label>Vehicle Category</label>
    <description>The rental vehicle tier booked</description>
    <inlineHelpText>Select the vehicle tier for this rental</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy</fullName>
                <default>true</default>
                <label>Economy</label>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>